# avr-node-src

./: .gitignore  CMakeLists.txt  crc.c  crc.h  crc32.h_  defines.h  functions.c  functions.h  hdlc.c  hdlc.h  main.c  makefile  max.h  max.h_  plugin.json  program.c  program.c_  program.h  project.h_  setup.c  setup.h  spi.c  spi.h  uart.c  uart.h  variables.c_  variables.h_  winbond.c  winbond.h
Boards/avt1622/: config.json  functions.c
Boards/nano3/: config.json  functions.c  functions.h  uart.c  uart.h
BuildPlugin/: BuildPlugin.cpp  BuildPlugin.hpp  BuildPlugin_global.hpp  CMakeLists.txt  IBuildPlugin.hpp
DownloadPlugin/: CMakeLists.txt  DownloadPlugin.cpp  DownloadPlugin.hpp  DownloadPlugin_global.hpp  IDownloadPlugin.hpp
MonitorPlugin/: CMakeLists.txt  IMonitorPlugin.hpp  MonitorPlugin.cpp  MonitorPlugin.hpp  MonitorPlugin_global.hpp  hdlc_crc16.hpp  hdlc_qt.cpp
ParsePlugin/: .gitignore  CMakeLists.txt  IParsePlugin.hpp  ParsePlugin.cpp  ParsePlugin.hpp  ParsePlugin_global.hpp
UploadPlugin/: CMakeLists.txt  IUploadPlugin.hpp  UploadPlugin.cpp  UploadPlugin.hpp  UploadPlugin_global.hpp
